--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -25,10 +25,23 @@
                     z-index:20 !important;
                     border: none !important;
                     overflow:visible !important;
+                    border-width: 0px !important;
+                    margin: 0px !important;
+                    padding: 0px !important;
+                }
+
+                #j_idt13, #j_idt12, #j_idt11{
+                    padding: 1px !important;
+                    padding-top: 5px !important;
+                    margin: 0px !important;
                 }
 
                 .ui-layout-north .ui-layout-unit-content {
                     overflow:visible !important;
+                }
+
+                .ui-layout-resizer-north {
+                    visibility: hidden !important;
                 }
 
                 .ui-widget {
@@ -37,13 +50,36 @@
 
                 .ui-layout-pane-west{
                     border: none !important;
+                    padding-top: 0px !important;
                     padding-left: 1px !important;
+                    margin-top: -7px !important;
                 }
 
                 .ui-layout-pane-center{
                     border: none !important;
+                    padding-top: 0px !important;
                     padding-left: 1px !important;
+                    margin-top: -7px !important;
                 }
+
+                .ui-layout-pane-right{
+                    border: none !important;
+                    padding-top: 0px !important;
+                    padding-left: 1px !important;
+                    margin-top: -7px !important;
+                }
+
+                .ui-toolbar-group-right{
+                    margin-top: -4px;
+                }
+                .ui-toolbar-group-left{
+                    margin-top: 3px;
+                }
+
+                .autocompleteTagsCreate .ui-autocomplete-multiple-container {
+                    width: 600px;
+                }
+
             </style>
             <script type="text/javascript">
                 PrimeFaces.locales['es'] = {
@@ -91,45 +127,48 @@
 
                             <p:menubar id="menubar" autoDisplay="false">
                                 <p:menuitem action="#{casoController.inbox}" 
-                                            ajax="false" value="Inbox de #{UserSessionBean.current.capitalName}" icon="ui-icon ui-icon-home"></p:menuitem>
-                                <p:submenu label="Casos" icon="ui-icon ui-icon-document">
+                                            ajax="false" value="Inbox" icon="fa fa-inbox"></p:menuitem>
+                                <p:submenu label="Casos" icon="fa fa-ticket">
                                     <p:menuitem value="Crear Nuevo Caso" action="#{casoController.prepareCreate}" ajax="false" icon="ui-icon ui-icon-plus"/>  
                                     <p:menuitem value="Crear Nuevo Caso Pre-Entrega" action="#{casoController.prepareCreateCasoPreentrega}" ajax="false" icon="paintbrushicon"
                                                 rendered="#{filtroAcceso.verificarAccesoACrearCasoPreentrega()}"/>  
-                                    <p:menuitem ajax="false" action="#{vistaController.prepareList()}" value="Administrar Vistas" icon="ui-icon-bookmark"
-                                                disabled="#{not filtroAcceso.verificarAccesoAFuncionAdministrarVistas()}"/>
                                 </p:submenu>
 
-                                <p:menuitem value="Clientes" action="#{emailClienteController.prepareList}" ajax="false" icon="ui-icon ui-icon-person"/>
+                                <p:menuitem value="Clientes" action="#{clienteController.prepareList}" ajax="false" icon="fa fa-group"/>
                                 <p:menuitem value="#{applicationBean.productDescription}(s)" action="#{productoController.prepareList}"
-                                            ajax="false" icon="ui-icon ui-icon-star"/>
+                                            ajax="false" icon="fa fa-building-o"/>
 
-                                <p:menuitem value="Agenda" action="#{globalScheduleController.prepareList}" ajax="false" icon="ui-icon ui-icon-schedule"/>
+                                <p:menuitem value="Agenda" action="#{globalScheduleController.prepareList}" ajax="false" icon="fa fa-calendar"/>
 
-                                <p:submenu label="Supervision" icon="ui-icon ui-icon-clipboard" rendered="#{filtroAcceso.verificarAccesoAFuncionSupervision()}">
+                                <p:submenu label="Supervision" icon="fa fa-eye" rendered="#{filtroAcceso.verificarAccesoAFuncionSupervision()}">
                                     <p:menuitem value="Alertas" action="#{auditLogController.alertList()}" ajax="false" icon="ui-icon ui-icon-alert"></p:menuitem>
                                     <p:menuitem value="Logs de Casos" ajax="false" action="#{auditLogController.prepareList}" icon="ui-icon ui-icon-info"></p:menuitem>
                                     <p:menuitem value="Reportes" ajax="false" action="/script/report_graphs/reports" icon="chartbaricon"></p:menuitem>
                                 </p:submenu>
 
-                                <p:submenu label="Ajustes" icon="ui-icon ui-icon-wrench" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">                                
+                                <p:submenu label="Ajustes" icon="fa fa-wrench" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">                                
 
-                                    <p:menuitem value="Áreas" action="#{areaController.prepareList}" ajax="false" icon="ui-icon ui-icon-folder-open"/>
-                                    <p:menuitem value="Canales" action="#{canalController.prepareList}" ajax="false" icon="ui-icon-transferthick-e-w"/>
-                                    <p:menuitem value="Roles de Usuario" action="#{rolController.prepareList}" ajax="false" icon="ui-icon ui-icon-note"/>
-                                    <p:menuitem value="Usuarios/Agentes" action="#{usuarioController.prepareList}" ajax="false" icon="ui-icon ui-icon-person"/>
-                                    <p:menuitem value="Grupos de Agentes" action="#{grupoController.prepareList}" ajax="false" icon="groupicon"/>
-
-
-                                    <p:menuitem value="Items de pre-entrega" action="#{itemController.prepareList}" ajax="false" icon="itemlisticon"
+                                    <p:menuitem value="Áreas" action="#{areaController.prepareList}" ajax="false" icon="fa fa-sitemap"/>
+                                    <p:menuitem value="Canales" action="#{canalController.prepareList}" ajax="false" icon="fa fa-exchange"/>
+                                    <p:separator/>
+                                    <p:menuitem value="Roles de Usuario" action="#{rolController.prepareList}" ajax="false" icon="fa fa-key"/>
+                                    <p:menuitem value="Usuarios/Agentes" action="#{usuarioController.prepareList}" ajax="false" icon="fa fa-user"/>
+                                    <p:menuitem value="Grupos de Agentes" action="#{grupoController.prepareList}" ajax="false" icon="fa fa-users"/>
+                                    <p:separator/>
+                                    <p:menuitem ajax="false" action="#{vistaController.prepareList()}" value="Vistas" icon="fa fa-filter"
+                                                disabled="#{not filtroAcceso.verificarAccesoAFuncionAdministrarVistas()}"/>
+                                    <p:menuitem value="Categorías" action="#{categoriaController.prepareList}" ajax="false" icon="fa fa-folder"/>
+                                    <p:menuitem value="Sub Estados de Casos" action="#{subEstadoCasoController.prepareList}" ajax="false" icon="fa fa-bookmark"/>
+                                    <p:menuitem value="Tipos de Casos" action="#{tipoCasoController.prepareList}" ajax="false" icon="fa fa-exclamation"/>
+                                    <p:separator/>
+                                    <p:menuitem value="SLA y Prioridad de Casos" action="#{prioridadController.prepareList}" ajax="false" icon="fa fa-bell"/>
+                                    <p:menuitem value="Reglas de Negocio" action="#{reglaTriggerController.prepareList()}" ajax="false" icon="fa fa-cogs"/>
+                                    <p:separator/>
+                                    <p:menuitem value="Items de pre-entrega" action="#{itemController.prepareList}" ajax="false" icon="fa fa-briefcase"
                                                 rendered="#{filtroAcceso.verificarAccesoAFuncionAdministrarItemsPreentrega()}"/>
-                                    <p:menuitem value="Categorías" action="#{categoriaController.prepareList}" ajax="false" icon="ui-icon ui-icon-folder-open"/>
-                                    <p:menuitem value="Sub Estados de Casos" action="#{subEstadoCasoController.prepareList}" ajax="false" icon="ui-icon ui-icon-tag"/>
-                                    <p:menuitem value="Tipos de Casos" action="#{tipoCasoController.prepareList}" ajax="false" icon="ui-icon ui-icon-carat-2-e-w"/>
-                                    <p:menuitem value="SLA y Prioridad de Casos" action="#{prioridadController.prepareList}" ajax="false" icon="ui-icon ui-icon-clock"/>
-                                    <p:menuitem value="Reglas de Negocio" action="#{reglaTriggerController.prepareList()}" ajax="false" icon="ui-icon ui-icon-gear"/>
-                                    <p:menuitem value="Lista negra (Correos)" action="#{blackListController.prepareList}" ajax="false" icon="ui-icon-circle-minus"  />
-                                    <p:menuitem value="Configuración" action="#{appSettingController.goToConfigPage}" ajax="false" icon="ui-icon ui-icon-wrench" />
+                                    <p:separator/>
+                                    <p:menuitem value="Lista negra (Correos)" action="#{blackListController.prepareList}" ajax="false" icon="fa fa-ban"  />
+                                    <p:menuitem value="Configuración" action="#{appSettingController.goToConfigPage}" ajax="false" icon="fa fa-wrench" />
 
                                 </p:submenu>
 
@@ -140,7 +179,7 @@
                                     <p:menuitem value="Jobs Agendados" action="/script/scheduler/jobs" ajax="false" icon="ui-icon-wrench" />
                                 </p:submenu>    
 
-                                <p:submenu label="Cuenta de usuario" icon="ui-icon ui-icon-person">                                
+                                <p:submenu label="Mi Cuenta" icon="fa fa-user">                                
                                     <p:menuitem value="Mis Datos" action="myAccount" ajax="false" icon="ui-icon ui-icon-person"></p:menuitem>
                                     <p:menuitem value="Respuestas Predefinidas" action="#{clippingController.prepareList()}" ajax="false" icon="ui-icon ui-icon-comment"></p:menuitem>
                                     <p:menuitem value="Cambiar Contraseña" onclick="panelChangePass.show()" icon="ui-icon ui-icon-key"></p:menuitem>
@@ -166,6 +205,11 @@
                                             action="#{casoController.filtraRevisarActualizaciones}" update="formfilter:filtros  formfilter:panelG1"
                                             icon="actualizadoicon">
                                 </p:menuitem>
+                                <f:facet name="options">
+                                    <p:inputText id="idCaso" value="#{casoController.idCaso}" title="#{bundle.EditCasoTitle_idCaso}"
+                                                 placeholder="id caso" style="margin-right:10px" size="6"/>
+                                    <p:commandButton ajax="false" action="#{casoController.prepareEditCaso}" icon="ui-icon ui-icon-search"/>
+                                </f:facet>
 
                             </p:menubar>
                             <p:tooltip for=":formTopMenu:casosActualizados" value="Casos con actualizaciones no revisadas" showEffect="fade" hideEffect="fade" />
@@ -173,13 +217,7 @@
                             <p:tooltip for=":formTopMenu:casosPorVencer" value="Casos por vencer" showEffect="fade" hideEffect="fade" />
                             <p:tooltip for=":formTopMenu:casosVencidos" value="Casos vencidos" showEffect="fade" hideEffect="fade" />
                         </h:form>
-                        <h:form>
 
-
-                            <h:outputLabel value="ID CASO:" for="idCaso" style="height: 19px; position: absolute; right: 240px; top: 15px;"/>
-                            <p:inputText id="idCaso" value="#{casoController.idCaso}" title="#{bundle.EditCasoTitle_idCaso}" required="true" requiredMessage="#{bundle.EditCasoRequiredMessage_idCaso}" style="position: absolute; right: 60px; top: 10px;"/>
-                            <p:commandButton ajax="false" action="#{casoController.prepareEditCaso}" value="Ir" icon="ui-icon ui-icon-search" style="position: absolute; right: 10px; top: 10px;"/>
-                        </h:form>
                     </ui:insert>  
                 </pe:layoutPane>  
 
@@ -203,8 +241,8 @@
 
             <p:dialog modal="false" widgetVar="statusDialog" header="Cargando..."   
                       draggable="false" closable="false" resizable="false">  
-                  <p:outputLabel value="Espere..."/>
-                 <p:graphicImage library="images" name="ajaxloadingbar.gif" />
+                <p:outputLabel value="Espere..."/>
+                <p:graphicImage library="images" name="ajaxloadingbar.gif" />
             </p:dialog>
 
             <p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
